# voicegenhub

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  IMPLEMENTATION_COMPLETE.md  KAGGLE_POC_SUMMARY.md  QWEN_TTS_IMPLEMENTATION.md  README.md  TTS_ALTERNATIVES_INDEX.md  TTS_IMPLEMENTATION_STATUS.md  TTS_OPENSOURCE_ROADMAP.md  TTS_RESEARCH_SUMMARY.md  check_8563.py  check_kaggle_kernel.py  clean_notebooks.py  clean_script.py  final_notebook_fix.py  generate_audio_test.py  generate_comparison.py  get_kernel_logs.py  get_logs_final.py  production_audio_test.py  pyproject.toml  reset_notebooks.py  restore_notebooks.py  sample_tts_comparison.py  scripts  stable_audio_kaggle_gpu.ipynb  test_audio_gen.py  test_coqui_demo.py  test_piper_demo.py  test_piper_provider.py  update_qwen_nb.py  write_nb_v2.py
.github/workflows/: daily-regression-test.yml  dist-cleanup.yml  nightly-tests.yml  unit-tests.yml
assets/: concurrency_plot.html
docs/: KAGGLE_INTEGRATION.md  benchmarks_and_performance.md  cloning_and_design.md  cpu_benchmark_report.md  installation.md  kaggle_gpu.md  licensing.md  providers.md
research/: README.md  RESEARCH_SUMMARY.md  TTS_DECISION_FRAMEWORK.md  TTS_INTEGRATION_GUIDE.md  TTS_MODELS_RESEARCH_2024.md
scripts/: compare_qwen_chatterbox.py  generate_final_comparison.py  quick_english_test.py  run_chatterbox_test.py  test_native_english.py
src/voicegenhub/: __init__.py  __main__.py  cli.py
src/voicegenhub/config/: __init__.py  settings.py
src/voicegenhub/content/: __init__.py  effect.py  music.py
src/voicegenhub/core/: __init__.py  engine.py  voice.py
src/voicegenhub/kaggle/: __init__.py  config_loader.py  pipeline.py
src/voicegenhub/kaggle/core/: __init__.py  deploy.py  download.py  poll_status.py
src/voicegenhub/kaggle/notebooks/: kaggle-chatterbox.ipynb  kaggle-qwen.ipynb  kernel-metadata-backup.json  kernel-metadata-new.json  kernel-metadata-test.json  kernel-metadata.json
src/voicegenhub/providers/: __init__.py  bark.py  base.py  chatterbox.py  coqui.py  edge.py  elevenlabs.py  factory.py  google.py  kokoro.py  melotts.py  piper.py  qwen.py  xtts_v2.py
src/voicegenhub/utils/: __init__.py  compatibility.py  logger.py
tests/: conftest.py  test_cli.py  test_cli_postprocessing.py  test_effect.py  test_integration.py  test_providers.py  test_validation.py  test_voicegenhub.py
tests/cli/: test_cli.py
tests/config/: test_settings.py
tests/core/: test_voice.py  test_voicegenhub.py
tests/integration/: test_integration.py  test_provider_load.py
tests/providers/: test_providers.py  test_validation.py
tests/utils/: test_logger.py
tmp_kaggle_output/: kernel-metadata.json  vgh-qwen-8563.ipynb
