[tool.poetry]
name = "voicegenhub"
version = "0.6.2"
description = "Simple Text-to-Speech library supporting multiple providers"
authors = ["leweex95 <csibi.levente14@gmail.com>"]
readme = "README.md"
packages = [{include = "voicegenhub", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
click = "^8.1.0"
structlog = "^23.2.0"
rich = "^13.7.0"
pydantic = "^2.11.9"

[tool.poetry.group.edge.dependencies]
edge-tts = "^6.1.0"

[tool.poetry.group.google.dependencies]
google-cloud-texttospeech = "*"

[tool.poetry.group.piper.dependencies]
piper-tts = "^1.3.0"

[tool.poetry.group.melotts.dependencies]
melo = "*"

[tool.poetry.group.kokoro.dependencies]
kokoro = "*"
soundfile = "*"

[tool.poetry.group.elevenlabs.dependencies]
elevenlabs = "*"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"

[tool.poetry.scripts]
voicegenhub = "voicegenhub.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short -m 'not slow'"
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
anyio_backends = "asyncio"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
