[tool.poetry]
name = "voicegenhub"
version = "0.6.9"
description = "Simple Text-to-Speech library supporting multiple providers"
authors = ["leweex95 <csibi.levente14@gmail.com>"]
readme = "README.md"
packages = [{include = "voicegenhub", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
click = "^8.1.0"
structlog = "^23.2.0"
rich = "^13.7.0"
pydantic = "^2.11.9"
edge-tts = "^7.2.0"
kokoro = {git = "https://github.com/hexgrad/kokoro.git", rev = "dfb907a02bba8152ca444717ca5d78747ccb4bec"}
soundfile = "*"
misaki = {git = "https://github.com/hexgrad/misaki.git", rev = "fba1236595f2d2bf21d414ba6e57d25256afada3"}

[tool.poetry.group.edge.dependencies]


[tool.poetry.group.google.dependencies]
google-cloud-texttospeech = "*"

[tool.poetry.group.piper.dependencies]
piper-tts = "^1.3.0"

[tool.poetry.group.melotts.dependencies]
melo = "*"

[tool.poetry.group.kokoro.dependencies]


[tool.poetry.group.elevenlabs.dependencies]
elevenlabs = "*"

[tool.poetry.group.xtts.dependencies]
coqui-tts = {git = "https://github.com/idiap/coqui-ai-TTS.git"}

[tool.poetry.group.bark.dependencies]
bark = "*"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"

[tool.poetry.scripts]
voicegenhub = "voicegenhub.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short -m 'not slow'"
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (only run in CI, skip in pre-commit)",
]
anyio_backends = "asyncio"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
